--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Experience the finest dining at Bella Vista Restaurant. Fresh ingredients, exceptional service, and unforgettable flavors."
     />
     <link rel="stylesheet" href="./style.css" />
-  <script defer src="main.js"></script></head>
+  <script defer src="./main.js"></script></head>
   <body>
     <div class="decorative-accent accent-1"></div>
     <div class="decorative-accent accent-2"></div>
